[package]
name = "projekto"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
# Internal
projekto_core = { path = "crates/core" }
projekto_shaping = { path = "crates/shaping" }
projekto_camera = { path = "crates/camera" }
projekto_genesis = { path = "crates/genesis" }
# projekto_widgets = { path = "crates/widgets" }

bevy = { version = "0.12", default-features = false }

# Bevy assets
# bevy_ecss = { git = "https://github.com/afonsolage/bevy_ecss.git" }

itertools = "0.10"

# Used by inspector
bevy-inspector-egui = { version = "0.22.0", optional = true }
bevy_egui = { version = "0.24.0", default-features = false, optional = true }

[dev-dependencies]
rand = "0.8"
projekto_core = { path = "crates/core", features = ["auto_load_kinds_descs"] }

[features]
default = [
     "dev",
     "inspector",
     # "mem_alloc",
]


# Only enable used bevy features, to reduce clean compile time.
dev = [
     "bevy/dynamic_linking",            # On Windows 11, dynamic and cargo-lld doesn't work if bevy_gilrs is enabled
     "bevy/bevy_asset",
     "bevy/bevy_scene",
     "bevy/bevy_winit",
     "bevy/bevy_render",
    "bevy/bevy_pbr",
     "bevy/png",
     "bevy/file_watcher",
     "bevy/x11",
]

inspector = ["dep:bevy-inspector-egui", "dep:bevy_egui"]
mem_alloc = []

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "main"
path = "src/main.rs"

[[example]]
name = "orbit_cam"
path = "examples/orbit_cam.rs"

[[example]]
name = "swap_cam"
path = "examples/swap_cam.rs"
