[package]
name = "projekto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]
default-members = ["crates/client"]

[workspace.dependencies]
projekto_core = { path = "crates/core",features = ["auto_load_kinds_descs"]  }
projekto_camera = { path = "crates/camera" }
projekto_proto = { path = "crates/proto" }
projekto_messages = { path = "crates/messages" }
projekto_server = { path = "crates/server" }
projekto_world_client = { path = "crates/world_client" }

bevy = "0.16"

rand = "0.9"
thiserror = "2.0"
serde = "1.0"

# IO
lz4_flex = "0.11"
bincode = "1.3"

# smol
futures-lite = "2.2"
async-channel = "2.2"
async-net = "2.0"
async-io = "2.3"
async-lock = "3.3"

[dev-dependencies]
bevy.workspace = true
projekto_camera.workspace = true
projekto_core.workspace = true
projekto_proto.workspace = true
projekto_server.workspace = true

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
#TODO(rust 1.77): enable `ref_as_ptr`
# ref_as_ptr = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
# missing_docs = "warn"

[lints]
workspace = true

[profile.dev.package."*"]
hint-mostly-unused = true
opt-level = 3

[[example]]
name = "orbit_cam"
path = "examples/orbit_cam.rs"

[[example]]
name = "swap_cam"
path = "examples/swap_cam.rs"
