[package]
name = "projekto_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "dev",
    "bevy/tonemapping_luts",
]

dev = [
    "bevy/dynamic_linking",
]


[dependencies]
bevy.workspace = true
projekto_core.workspace = true
projekto_camera.workspace = true
projekto_world_client.workspace = true

[lints]
workspace = true
