[package]
name = "projekto_client"
version = "0.1.0"
edition = "2024"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "dev",
    "bevy/tonemapping_luts",
    "bevy/wayland",
]

dev = [
    "bevy/dynamic_linking",
]


[dependencies]
projekto_core.workspace = true
projekto_camera.workspace = true
projekto_proto.workspace = true
projekto_messages.workspace = true

bevy.workspace = true

futures-lite.workspace = true

[lints]
workspace = true

[[bin]]
name = "client"
path = "src/main.rs"
