[package]
name = "projekto_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
bevy.workspace = true
serde.workspace = true
ron.workspace = true

once_cell = "1.19"

[dev-dependencies]
rand.workspace = true

[features]
auto_load_kinds_descs = []
default = ["auto_load_kinds_descs"]

[lints]
workspace = true
