[package]
name = "projekto_core"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
bevy.workspace = true
serde.workspace = true

once_cell = "1.21"
ron = "0.10"

[dev-dependencies]
rand.workspace = true
criterion.workspace = true

[features]
auto_load_kinds_descs = []
default = ["auto_load_kinds_descs"]

[lints]
workspace = true

[[bench]]
name = "storage"
harness = false
