[package]
name = "projekto_proto"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
projekto_proto_macros = { path = "macros"}

bevy.workspace = true

thiserror.workspace = true
serde.workspace = true

# smol
futures-lite.workspace = true
async-channel.workspace = true
async-net.workspace = true

# IO
lz4_flex.workspace = true
bincode.workspace = true

[lints]
workspace = true
