[package]
name = "projekto_server"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev"]
faces_merging = []

dev = [
    "bevy/dynamic_linking",
]

[dependencies]
projekto_core.workspace = true
projekto_proto.workspace = true
projekto_proto_macros = { path = "../proto/macros"}

bevy.workspace = true

thiserror.workspace = true
serde.workspace = true

# smol
futures-lite.workspace = true
async-channel.workspace = true
async-lock.workspace = true
async-io.workspace = true
async-net.workspace = true

# IO
lz4_flex = "0.11"
bincode = "1.3"

# genesis
bracket-noise = "0.8.7"

[dev-dependencies]
rand.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"

[lints]
workspace = true
