[package]
name = "projekto_server"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
default-run = "main"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev"]
faces_merging = []

dev = [
    "bevy/dynamic_linking",
]

[dependencies]
projekto_core.workspace = true
projekto_proto.workspace = true
projekto_messages.workspace = true
projekto_archive.workspace = true

bevy.workspace = true

thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
lz4_flex.workspace = true

futures-lite.workspace = true
async-io.workspace = true
async-channel.workspace = true
async-lock.workspace = true

# genesis
bracket-noise = "0.8.7"

[dev-dependencies]
rand.workspace = true
criterion.workspace = true

tracing = "0.1"
tracing-subscriber = "0.3"

[lints]
workspace = true

[[bin]]
name = "main"
path = "bin/main.rs"

[[example]]
name = "server_bench"
path = "examples/server_bench.rs"

[[example]]
name = "check_single_chunk"
path = "examples/check_single_chunk.rs"

[[example]]
name = "sample_chunks"
path = "examples/sample_chunks.rs"

[[bench]]
name = "meshing"
harness = false
