[package]
name = "projekto_world_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
projekto_core = {path = "../core"}
projekto_world_server = {path = "../world_server"}

bevy = {version = "0.12", default-features = false}
