[package]
name = "projekto_world_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["dev"]

dev = [
    "bevy/dynamic_linking",
]

[dependencies]
projekto_core.workspace = true
projekto_server.workspace = true

bevy.workspace = true

[lints]
workspace = true
