[package]
name = "projekto_world_server"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
faces_merging = []

[dependencies]
projekto_core = {path = "../core"}

bevy = {version = "0.12", default-features = false}

serde = "1.0"

# genesis
bracket-noise = "0.8.7"

[dev-dependencies]
rand = "0.8"
