[package]
name = "projekto_world_server"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
faces_merging = []

[dependencies]
projekto_core = {path = "../core"}

bevy = {version = "0.12", default-features = false}

serde = "1.0"
futures-lite = "2.2"
thiserror = "1.0"
async-channel = "2.2"

# IO
lz4_flex = "0.11"
bincode = "1.3"

# genesis
bracket-noise = "0.8.7"

[dev-dependencies]
rand = "0.8"
bevy = {version = "0.12", default-features = false, features = ["multi-threaded"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "server"
path = "examples/server.rs"
